Realizada lógica para el carrito de compras y favoritos

--- a/src/pages/config/config.html
+++ b/src/pages/config/config.html
@@ -37,7 +37,9 @@
         </ion-list>
         <div style="width: 100%; text-align: center">
             <button ion-button 
-            style="width: 90%; text-align: center; background-color: rgb(255, 74, 74)">Cerrar Sesión</button>
+                style="width: 90%; text-align: center; background-color: rgb(255, 74, 74)"
+                (click)="closeSesion()">Cerrar Sesión
+            </button>
         </div>
     </div>
 </ion-content>
