Se anadio la navegacion a la pagina ordenes desde la pagina cart.

--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -89,7 +89,7 @@
 <div id="bottom" class="bar">
   <!--Ordenar-->
   <div class="order bar">
-    <p id="ord"><strong>Ordenar</strong></p>
+    <p id="ord"><strong (click)="nav()">Ordenar</strong></p>
   </div>
 </div>
 
