Se corrigio el lobre de categ a categories.

--- a/src/pages/start/start.html
+++ b/src/pages/start/start.html
@@ -46,7 +46,7 @@
       </button>
 
       <ion-slides class="categories">
-        <ion-slide *ngFor="let category of categ">
+        <ion-slide *ngFor="let category of categories">
           <p id="categoy"><strong>{{ category.name }}</strong></p>
         </ion-slide>
       </ion-slides>
