--- a/src/pages/start/start.html
+++ b/src/pages/start/start.html
@@ -85,7 +85,9 @@
 <drawer-category-panel></drawer-category-panel>
 
 <!--Motrar Filtro de Variantes-->
-<drawer-filter [sideBar]="sideBar">
-</drawer-filter>
+<!-- <drawer-filter [sideBar]="sideBar"></drawer-filter> -->
+<div [ngClass]="{'backgroundNoColor': initialColor, 'backgroundBlack': leftColor}"></div>
+<div (click)="filterTransition()" [ngClass]="{'fakeButtonInitial': initialButton, 'fakeButtonLeft': leftButton}" class="fakeButton"></div>
+<drawer-filter [ngClass]="{'idle': initialPosition, 'left': leftPosition}"></drawer-filter>
 
 
