--- a/src/pages/start/start.html
+++ b/src/pages/start/start.html
@@ -81,7 +81,7 @@
 
 
 <!--Mostrar Categorias-->
-<drawer-category [sideBar]="sideBar" [categ]="categ"></drawer-category>
+<drawer-category [sideBar]="sideBar" [categories]="categories"></drawer-category>
 <drawer-category-panel></drawer-category-panel>
 
 <!--Motrar Filtro de Variantes-->
