--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -1,26 +1,19 @@
 <ion-content padding>
-
-  <!-- <div class="card-cart" *ngIf="cart!='null'">
-    <div style="width: 100%; text-align: center">
-      <h2>{{cart}}
-      </h2>
-    </div>
-    </div> -->
-  <!-- *ngIf="cart=='null'" -->
-  <div class="card-cart" >
-    <div style="width: 100%; text-align: center"><h2>Carrito de Compras</h2></div>
+  <div *ngIf="!cartProd" class="card-cart"><h2 style="color:rgb(218, 218, 218); text-align: center">El carrito de compras está vacío</h2></div>
+  <div *ngIf="cartProd" class="card-cart" >
+    <div style="width: 100%; text-align: center"><h2>Carrito de compras</h2></div>
     <ion-card *ngFor="let product of cartProd">
     <div>
       <ion-grid center>
         <ion-row class="row-card">
           <ion-col>
-            <!-- <div class="img-card" 
-              [style.background-image]="'url(assets/imgs/prueba/' + product.foto + ')'">
-            </div> -->
+            <div class="img-card" 
+              [style.background-image]="'url(https://alquio.com/productos/' + product.foto + ')'">
+            </div>
           </ion-col>
           <ion-col>
             <div class="class-center">
-              <p>{{product.Name}}</p>
+              <p>{{product.titulo}}</p>
             </div>
           </ion-col>
         </ion-row>
@@ -28,7 +21,7 @@
           <ion-col>
             <div class="class-center">
               <div style="position: relative">
-                <p>{{product.Precio}}</p>
+                <p>{{product.precio}}</p>
               </div>
             </div>
           </ion-col>
@@ -38,7 +31,7 @@
                 <button class="button-remove" (click)="decrement(product)">
                     <ion-icon name="remove"></ion-icon>
                 </button>
-                <p class="quantity class-center" style="position: absolute">{{product.quantity}}</p>
+                <p class="quantity class-center" style="position: absolute">{{product.cantidad}}</p>
                 <img class="img-control" src="assets/imgs/customicons/control.png" >
       
                 <button class="button-add" (click)="increment(product)">
@@ -51,38 +44,13 @@
       </ion-grid>
       </div>
       <hr style="border:5px; width: 90%; text-align: center; border-width: 5px">
-      <ion-card-content>
-          <p>{{product.Tipo_de_envio}}</p>
+      <ion-card-content (click)="goProduct(product)">
+          <div style="margin: 0" [innerHTML]='product.descripcion_corta'></div>
+          <!-- <p>{{product.descripcion_corta}}</p> -->
       </ion-card-content>
     </ion-card>
 
-    <!-- <div style="width: 100%; text-align: center"><button ion-button (click)="goStart()">Realizar pedido</button>
-    </div> -->
-
   </div>
-
-  <!-- <div style="text-align: center; margin-bottom: 20%">
-    <ion-row>
-      <ion-col>
-      </ion-col>
-      <ion-col>
-        <p class="class-center" style="text-align: right">Artículos:</p>
-      </ion-col>
-      <ion-col>
-        <p class="class-center" style="text-align: left">{{totalQty}}</p>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-      </ion-col>
-      <ion-col>
-        <p class="class-center" style="text-align: right">Total a pagar:</p>
-      </ion-col>
-      <ion-col >
-        <p class="class-center" style="text-align: left">{{totalPrice}}</p>
-      </ion-col>
-    </ion-row>
-  </div> -->
   
 </ion-content>
 
