--- a/src/pages/sing-in/sing-in.html
+++ b/src/pages/sing-in/sing-in.html
@@ -1,40 +1,86 @@
-
 <ion-content padding center text-center class="contentSingIn">
-    <button (click)="goBack()" style="background-color: transparent;position: absolute;left: 15px;">
-        <ion-icon name="arrow-back" style="color: white; zoom: 2.5">
-        </ion-icon>
-      </button>
-      
-  
+  <button (click)="goBack()" style="background-color: transparent;position: absolute;left: 15px;">
+    <ion-icon name="arrow-back" style="color: white; zoom: 2.5">
+    </ion-icon>
+  </button>
+
+
   <div class="initial">
     <div>
-        <img src="assets/imgs/fondo-Inico.png" class="imgSingIn"
-        alt="fondo" />
+      <img src="assets/imgs/fondo-Inico.png" class="imgSingIn" alt="fondo" />
     </div>
-  
+
+    <form [formGroup]="frmRegister">
       <ion-list class="list">
-          <ion-item>
-            <ion-label><ion-icon name="person"></ion-icon></ion-label>
-            <ion-input placeholder="Nombre completo"></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-label><ion-icon name="mail"></ion-icon></ion-label>
-            <ion-input placeholder="Correo" type="password"></ion-input>
-          </ion-item>
-          <ion-item>
-              <ion-label><ion-icon name="person"></ion-icon></ion-label>
-              <ion-input placeholder="Usuario"></ion-input>
-            </ion-item>
-          <ion-item>
-              <ion-label><ion-icon name="lock"></ion-icon></ion-label>
-            <ion-input placeholder="Contraseña" type="password"></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-label><ion-icon name="lock"></ion-icon></ion-label>
-            <ion-input placeholder="Confirmar contraseña" type="password"></ion-input>
-          </ion-item>
-      </ion-list>
-        <button ion-button round (click)="goBack()" class="buttonSingIn">Registrarse</button>
+
+        <ion-item>
+          <ion-label>
+            <ion-icon name="person"></ion-icon>
+          </ion-label>
+          <ion-input placeholder="Nombre completo" formControlName="name"></ion-input>
+        </ion-item>
         
+        <ion-item *ngIf="frmRegister.get('name').dirty &&
+                         frmRegister.get('name').hasError('required')">
+          <p color="danger" ion-text>Debe ingresar un nombre.</p>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>
+            <ion-icon name="mail"></ion-icon>
+          </ion-label>
+          <ion-input placeholder="Correo" type="email" formControlName="email"></ion-input>
+        </ion-item>
+
+        <ion-item *ngIf="frmRegister.get('email').dirty &&
+                         frmRegister.get('email').hasError('required') &&
+                         frmRegister.get('email').hasError('email')">
+          <p color="danger" ion-text>Debe ingresar un correo.</p>
+        </ion-item>
+
+        <ion-item *ngIf="frmRegister.get('email').dirty &&
+                         !frmRegister.get('email').hasError('required') &&
+                         frmRegister.get('email').hasError('email')">
+          <p color="danger" ion-text>Este no es un correo.</p>
+        </ion-item>
+
+        <!-- <ion-item>
+          <ion-label>
+            <ion-icon name="person"></ion-icon>
+          </ion-label>
+          <ion-input placeholder="Usuario"></ion-input>
+        </ion-item> -->
+
+        <ion-item>
+          <ion-label>
+            <ion-icon name="lock"></ion-icon>
+          </ion-label>
+          <ion-input placeholder="Contraseña" type="password" formControlName="password"></ion-input>
+        </ion-item>
+
+        <ion-item *ngIf="frmRegister.get('password').dirty &&
+                         frmRegister.get('password').hasError('required')">
+          <p color="danger" ion-text>Debe ingresar una contraseña.</p>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>
+            <ion-icon name="lock"></ion-icon>
+          </ion-label>
+          <ion-input placeholder="Confirmar contraseña" type="password" formControlName="confirmPassword"></ion-input>
+        </ion-item>
+
+        <ion-item *ngIf="frmRegister.get('confirmPassword').dirty &&
+                         frmRegister.value.password !== frmRegister.value.confirmPassword">
+          <p color="danger" ion-text>Las contraseñas no coinciden.</p>
+        </ion-item>
+
+      </ion-list>
+    </form>
+
+    <button ion-button round [disabled]="frmRegister.invalid || 
+                                         frmRegister.value.password !== frmRegister.value.confirmPassword"
+                                         (click)="registrarUsuario()" class="buttonSingIn">Registrarse</button>
+
   </div>
 </ion-content>
