--- a/src/pages/favorite/favorite.html
+++ b/src/pages/favorite/favorite.html
@@ -21,7 +21,7 @@
           <ion-col>
             <div class="class-center">
               <div style="position: relative">
-                <p>{{product.precio}}</p>
+                <p>$ {{product.precio}}</p>
               </div>
             </div>
           </ion-col>
