--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,6 +1,27 @@
 <ion-content padding>
-  <div style="border-color: #757575; width: 100%; height: 100%;">
+  <div class="boxBorders">
+      <ion-list>
 
+          <ion-item>
+            <h2><b>Contacto</b></h2>
+            <p>carlos_andres95@outlook.com</p>
+            <button ion-button clear item-end>Cambiar</button>
+          </ion-item>
+
+          <ion-item>
+            <h2><b>Enviar a</b></h2>
+            <p>CALLE 1 F 3918, CASA 111611</p>
+            <p>BOGOTA DC, Colombia</p>
+            <button ion-button clear item-end>Cambiar</button>
+          </ion-item>
+          
+          <ion-item>
+            <h2><b>Method</b></h2>
+            <p>Free Shipping - <b>Free</b></p>
+          </ion-item>
+
+
+        </ion-list>
   </div>
 </ion-content>
 
