Cambio de fondo a pantalla de inicio

--- a/src/pages/start/start.html
+++ b/src/pages/start/start.html
@@ -50,10 +50,10 @@
             <ion-thumbnail>
               <img [src]="'https://alquio.com/productos/' + product.foto" class="imgCard"/>
             </ion-thumbnail>
-            <ion-card-content>
+            <div class="card-cont">
               <p class="precio">{{ 'USD ' + product.precio }}</p>
               <p class="titulo">{{ product.titulo }}</p>
-            </ion-card-content>
+            </div>
           </div>
           <!-- </ion-card> -->
         </div>
