--- a/src/pages/product/product.html
+++ b/src/pages/product/product.html
@@ -25,7 +25,7 @@
               <ion-row>
                 <ion-col>
                   <div class="price" style="margin-top: 17.5px">
-                    <p>$ {{product.precio}}</p>
+                    <p>{{ 'COP ' + product.precio }}</p>
                   </div>
                 </ion-col>
               </ion-row>
