Style: Ajusta el diseño de la pagina product

--- a/src/pages/product/product.html
+++ b/src/pages/product/product.html
@@ -179,7 +179,7 @@
     </div>
 
     <div style ="background-color: #eeeeee">
-      <ion-segment [(ngModel)]="detail">
+      <ion-segment [(ngModel)]="detail" class="my-segment">
         <ion-segment-button value="description">
           Descripción
         </ion-segment-button>
@@ -217,7 +217,7 @@
 
   <div class="initial">
     <div id="bottom" class="bar">
-      <img src="assets/imgs/customicons/right.png" class="icon-bar" style="margin-top: 15px">
+      <img src="assets/imgs/customicons/circle-png-circle-png-hd-1600.png" class="car-icon-bar" style="margin-top: 10px">
       <!-- <ion-icon name="arrow-up" style="color: white; zoom: 1.5; padding-top: 5px"></ion-icon> -->
       <button class="buttonBar" (click)="goOrder()">
         <p class="title-bot"><strong>Comprar</strong></p>
