--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -3,29 +3,59 @@
   <div *ngIf="cartProd" class="card-cart" >
     <div style="width: 100%; text-align: center"><h2>Carrito de compras</h2></div>
     <ion-card *ngFor="let product of cartProd">
+    <ion-row padding-left padding-right class="top-card-row">
+      <ion-col col-6 class="card-date">
+        {{product.fecha_publicacion}}
+      </ion-col>
+      <ion-col col-6 class="card-number">
+        No. {{product.cod_sku}}
+      </ion-col>
+    </ion-row>
+    <hr style="border:5px; width: 90%; text-align: center; border-width: 5px">
     <div>
       <ion-grid center>
         <ion-row class="row-card">
-          <ion-col>
-            <div class="img-card" 
+          <ion-col col-4>
+            <div class="img-card"
               [style.background-image]="'url(https://alquio.com/productos/' + product.foto + ')'">
             </div>
           </ion-col>
-          <ion-col>
-            <div class="class-center">
+          <ion-col col-4>
+            <!-- <div class="class-center">
+              <div style="position: relative">
+                <p>$ {{product.precio}}</p>
+              </div>
+            </div> -->
+            <ion-row>
+              <ion-col col-12 text-center><p style="color: rgb(177, 177, 177);">Precio</p></ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col col-12 text-center>$ {{product.precio}}</ion-col>
+            </ion-row>
+          </ion-col>
+          <ion-col col-4>
+            <!-- <div class="class-center">
               <p>{{product.titulo}}</p>
-            </div>
+            </div> -->
+            <ion-row>
+              <ion-col col-12 text-center>
+                <img class="status-image" src="assets/imgs/customicons/cancelado.png" alt="">
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col col-12 text-center><p style="font-size: 15px;">Cancelado</p></ion-col>
+            </ion-row>
           </ion-col>
         </ion-row>
         <ion-row>
-          <ion-col>
+          <!-- <ion-col>
             <div class="class-center">
               <div style="position: relative">
                 <p>$ {{product.precio}}</p>
               </div>
             </div>
-          </ion-col>
-          <ion-col>
+          </ion-col> -->
+          <!-- <ion-col>
             <div>
               <div>
                 <button class="button-remove" (click)="decrement(product)">
@@ -39,13 +69,32 @@
                 </button>
               </div>
             </div>
-          </ion-col>
+          </ion-col> -->
         </ion-row>
       </ion-grid>
       </div>
       <hr style="border:5px; width: 90%; text-align: center; border-width: 5px">
-      <ion-card-content (click)="goProduct(product)">
-          <div style="margin: 0" [innerHTML]='product.descripcion_corta'></div>
+      <ion-card-content no-padding (click)="goProduct(product)">
+        <ion-row no-padding>
+          <ion-col col-6 no-padding>
+            {{product.titulo}}
+          </ion-col>
+          <ion-col col-6 no-padding>
+            <ion-row no-padding>
+              <ion-col col-12 no-padding>
+                <ion-icon class="icon-plane" name="plane"></ion-icon>
+              </ion-col>
+            </ion-row>
+            <ion-row no-padding>
+              <ion-col col-12 no-padding>
+                <p class="card-envio">ENVÍO INTERNACIONAL</p>
+                <p class="card-envio">25 A 35 DÍAS</p>
+              </ion-col>
+            </ion-row>
+            
+          </ion-col>
+        </ion-row>
+          <!-- <div style="margin: 0" [innerHTML]='product.descripcion_corta'></div> -->
           <!-- <p>{{product.descripcion_corta}}</p> -->
       </ion-card-content>
     </ion-card>
