--- a/src/pages/favorite/favorite.html
+++ b/src/pages/favorite/favorite.html
@@ -1,5 +1,10 @@
 <ion-content padding>
-  <div *ngIf="!favoriteProd" class="card-cart"><h2 style="color:rgb(218, 218, 218); text-align: center">No tiene ningun producto como favorito</h2></div>
+  <div *ngIf="!favoriteProd" class="card-cart">
+    <h2 style="color:rgb(218, 218, 218); text-align: center">
+      No tiene ningun producto como favorito
+    </h2>
+    <img src="assets/imgs/fav/eastwood-list-is-empty.png" alt="">
+  </div>
   <div *ngIf="favoriteProd" class="card-cart" >
     <div style="width: 100%; text-align: center"><h2>Favoritos</h2></div>
     <ion-card *ngFor="let product of favoriteProd">
