Feat: Añade mensaje e imagen en caso de no tener mensajes

--- a/src/pages/jivo-chat/jivo-chat.html
+++ b/src/pages/jivo-chat/jivo-chat.html
@@ -1,4 +1,14 @@
 <ion-content>
+
+    <div>
+        <div text-center class="div-alquio-img">    
+            <img width="100px" height="130px" src="assets/imgs/orders/Logo Purpura 2.png" alt="">
+            <img width="100%" src="assets/imgs/messages/fogg-no-messages-3.png" alt="">
+          </div>
+          <div text-center padding>
+            <label class="title-nomessages">Todavía no tienes mensajes :(</label>
+          </div>
+    </div>
  
 </ion-content>
 
