--- a/src/pages/jivo-chat/jivo-chat.html
+++ b/src/pages/jivo-chat/jivo-chat.html
@@ -1,14 +1,15 @@
 <ion-content>
- 
+
 </ion-content>
 
 <!--Opacidad del Contenido-->
 <drawer-opacity #sideBar></drawer-opacity>
 
 <!--Volver-->
-<button class="button-back" (click)="backPage()">
+<!-- <button class="button-back" (click)="backPage()">
   <ion-icon name="arrow-back" style="color: white"></ion-icon>
-</button>
+</button> -->
+<button-back></button-back>
 
 <!--Header-->
 <header-app [options]="namePage"></header-app>
