--- a/src/pages/config/config.html
+++ b/src/pages/config/config.html
@@ -1,7 +1,7 @@
 <ion-content padding style="background-color: #eeeeee;">
     <div style="background-color: #eeeeee;">
         <ion-list style="margin-top: 20%">
-            <ion-item>
+            <ion-item (click)="goToProfile()">
                 <p>Perfil</p>
             </ion-item>
             <ion-item>
