--- a/src/pages/user-detail/user-detail.html
+++ b/src/pages/user-detail/user-detail.html
@@ -1,18 +1,35 @@
-<!--
-  Generated template for the UserDetailPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>UserDetail</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
+<!-- <header-app [options]="namePage"></header-app> -->
+<ion-content padding style="background-color: #eeeeee;">
+    <div style="background-color: #eeeeee;">
+        <ion-list style="margin-top: 20%">
+            <!-- <ion-item>
+                <ion-label>Todo</ion-label>
+                <ion-input type="text" name="title"></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-label>Description</ion-label>
+                <ion-textarea name="description"></ion-textarea>
+              </ion-item>
+              <button ion-button type="submit" block>Add Todo</button> -->
+        </ion-list>
+    </div>
 </ion-content>
+
+<!--Opacidad del Contenido-->
+<!-- <drawer-opacity #sideBar></drawer-opacity> -->
+
+<!--Volver-->
+<!-- <button class="button-back" (click)="backPage()">
+    <ion-icon name="arrow-back" style="color: white"></ion-icon>
+</button> -->
+<button-back></button-back>
+
+<!--Header-->
+
+
+<!--Bottom-->
+<!-- <bottom-app></bottom-app> -->
+
+<!--Opciones del usuario-->
+<drawer-user [options]="namePage" [sideBar]="sideBar"></drawer-user>
+<drawer-user-panel></drawer-user-panel>
